fix to the mobile header graphic
not visible in desktop view anymore

--- a/css/style.scss
+++ b/css/style.scss
@@ -618,6 +618,15 @@ nav div.main-nav-desktop{
 header div.header-box{
 	position: relative;
 }
+div.inner-header{
+		background-image: none;
+		background-repeat: no-repeat;
+		background-size-y: 5em;
+		background-position: right top;
+		height: 0;
+		width: 0;
+		display: inline;
+	}
 
 .main-content{
 	position: relative;
